# sdk

./: .gitignore  .gitlab-ci.yml  README.md  README_ru.md  openapi.yaml
dotnet/: NativeBPM.Client.sln  README.md  README_ru.md  appveyor.yml
go/: README.md  README_ru.md  api_default.go  builder.go  client.go  client_test.go  configuration.go  fluent_client.go  go.mod  go.sum  model_claim_task_request.go  model_complete_instance_task_request.go  model_complete_task_request.go  model_create_webhook_request.go  model_history_record.go  model_incident_record.go  model_list_definitions_401_response.go  (+9 more)
rust/: Cargo.toml  README.md
rust/.openapi-generator/: FILES
rust/docs/: ClaimTaskRequest.md  CompleteInstanceTaskRequest.md  CompleteTaskRequest.md  CreateWebhookRequest.md  DefaultApi.md  HistoryRecord.md  IncidentRecord.md  ListDefinitions401Response.md  ProcessDefinition.md  ProcessInstance.md  ResolveIncident200Response.md  StartInstanceRequest.md  TaskRecord.md  WebhookDeliveryRecord.md  WebhookRecord.md
rust/examples/: workflow_dmn.rs  workflow_native.rs  workflow_wasm.rs  workflow_with_wasm_plugins.rs
rust/src/: builder.rs  lib.rs
rust/src/apis/: configuration.rs  default_api.rs
rust/src/models/: claim_task_request.rs  complete_instance_task_request.rs  complete_task_request.rs  create_webhook_request.rs  history_record.rs  incident_record.rs  list_definitions_401_response.rs  mod.rs  process_definition.rs  process_instance.rs  resolve_incident_200_response.rs  start_instance_request.rs  task_record.rs  webhook_delivery_record.rs  webhook_record.rs
(+400 files in other folders)
